--- a/01-getting-started/package.json
+++ b/01-getting-started/package.json
@@ -19,5 +19,8 @@
         "jest": "^24.9.0",
         "node-fetch": "^2.6.0",
         "whatwg-fetch": "^3.0.0"
+    },
+    "dependencies": {
+        "@types/jest": "^25.1.3"
     }
 }
