--- a/03-objects/package.json
+++ b/03-objects/package.json
@@ -15,12 +15,14 @@
     "license": "ISC",
     "devDependencies": {
         "@babel/cli": "^7.8.4",
-        "@babel/preset-env": "^7.8.7",
+        "@babel/plugin-proposal-class-properties": "^7.8.3",
+        "@babel/preset-env": "^7.9.0",
         "jest": "^24.9.0",
         "node-fetch": "^2.6.0",
         "whatwg-fetch": "^3.0.0"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.12.1",
         "@types/jest": "^25.1.4",
         "esm": "^3.2.25",
         "requirejs": "^2.3.6"
