--- a/react-02/.gitignore
+++ b/react-02/.gitignore
@@ -1,7 +1,21 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Mac crap
+.DS_Store
+
 # dependencies
 /node_modules
+jspm_packages/
 /.pnp
 .pnp.js
 
