--- a/react-02/package.json
+++ b/react-02/package.json
@@ -18,6 +18,16 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "jest": {
+    "collectCoverageFrom": [
+      "**/*.{js,jsx}",
+      "src/**/*.js",
+      "!**/node_modules/**",
+      "!**/vendor/**",
+      "!src/index.js",
+      "!src/tempPolyfills.js"
+    ]
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -32,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/dom": "^7.5.6"
   }
 }
