Cities and Communities working, need more tests

--- a/react-02/.gitignore
+++ b/react-02/.gitignore
@@ -13,12 +13,11 @@ $RECYCLE.BIN/
 # Mac crap
 .DS_Store
 
-# dependencies
-/node_modules
+# dpendencies
+node_modules
 jspm_packages/
 /.pnp
-.pnp.js
-
+.pnp.j
 # testing
 /coverage
 
