--- a/react-02/package.json
+++ b/react-02/package.json
@@ -44,6 +44,8 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/dom": "^7.5.6"
+    "@testing-library/dom": "^7.5.6",
+    "node-fetch": "^2.6.0",
+    "pretty": "^2.0.0"
   }
 }
