--- a/03-objects/package.json
+++ b/03-objects/package.json
@@ -7,8 +7,7 @@
         "test": "jest",
         "testcov": "jest --coverage",
         "test1": "jest src/01-getting-started",
-        "test1cov": "jest src/01-getting-started --coverage",
-        "testfile": "jest src/01-getting-started/scripts/lfsplay.test.js"
+        "test1cov": "jest src/01-getting-started --coverage"
     },
     "keywords": [],
     "author": "",
